<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_req_prompt"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <Spinner
                    android:id="@+id/action_required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            />
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            >
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_date_of_completion"
                    android:hint="@string/expected_date_of_completion_prompt"
                    android:textSize="@dimen/text_size"
                    android:inputType="text"
            />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/actual_date_of_completion"
                        android:hint="@string/actual_date_of_completion_prompt"
                        android:textSize="@dimen/text_size"
                        android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/percentage_done"
                        android:hint="@string/percentage_done_prompt"
                        android:textSize="@dimen/text_size"
                        android:inputType="text"
                />
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resources_needed_prompt"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <ListView
                    android:id="@+id/resources_needed"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="7.0sp" />
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_next"
                    style="@style/ButtonStyle"
                    android:text="@string/btn_next"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
