<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/province_prompt"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <Spinner
                    android:id="@+id/province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/district_prompt"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <Spinner
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ward_prompt"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <Spinner
                    android:id="@+id/ward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period_prompt"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
                    android:textSize="@dimen/text_size"
            />
            <Spinner
                    android:id="@+id/period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="@dimen/input_side_margin"
                    android:layout_marginEnd="@dimen/input_side_margin"
            />
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_search"
                    style="@style/ButtonStyle"
                    android:text="@string/btn_search"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
