<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/challenges_label"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:textSize="@dimen/text_size"
        />
        <ListView
                android:id="@+id/challenges"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:divider="@android:color/transparent"
                android:dividerHeight="7.0sp" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strategy_label"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:textSize="@dimen/text_size"
        />
        <ListView
                android:id="@+id/strategy"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/input_side_margin"
                android:layout_marginEnd="@dimen/input_side_margin"
                android:divider="@android:color/transparent"
                android:dividerHeight="7.0sp" />

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/ButtonStyle"
                android:text="@string/btn_save_label"
        />
    </LinearLayout>
</LinearLayout>
